Fixed too wide css rules

--- a/client/my-sites/plugins/plans/style.scss
+++ b/client/my-sites/plugins/plans/style.scss
@@ -9,7 +9,7 @@
 	}
 }
 
-.promo-section {
+.plugin-plans .promo-section {
 	.promo-section__promos {
 		overflow: auto;
 		white-space: nowrap;
